2009-06-29 [colin]	3.7.1cvs82

	* src/matcher_parser_lex.l
		Fix bug 1878, 'Processing rules for folders with brackets aren't saved'

2009-06-29 [colin]	3.7.1cvs81

	* src/addressbook.c
		Fix warnings
	* src/editgroup.c
		Fix crash (out-of-bounds tree column)
	* src/gtk/gtkcmctree.c
	* src/gtk/gtksctree.c
		Prevent using an out-of-bounds tree column

2009-06-29 [colin]	3.7.1cvs80

	* src/ldapupdate.c
	* src/ldif.c
		Leak fixes; patch by Pawel Pekala.

2009-06-26 [colin]	3.7.1cvs79

	* src/summaryview.c
		Sort by msgnum if dates are equal

2009-06-24 [paul]	3.7.1cvs78

	* src/summaryview.c
		make some (forgotten) strings translatable

2009-06-19 [colin]	3.7.1cvs77

	* src/summaryview.c
		Fix menu sensitiveness

2009-06-18 [colin]	3.7.1cvs76

	* configure.ac
	* src/plugins/pgpcore/sgpgme.c
	* src/plugins/pgpcore/sgpgme.h
	* src/plugins/pgpmime/mypgpcore.def
	* src/plugins/pgpmime/pgpmime.c
	* src/plugins/smime/mypgpcore.def
	* src/plugins/smime/smime.c
		Use largefile support (and stop using our old GPGME
		hack on gpgme_data_seek/rewind)
		(See 1.9.12cvs44 to 46 - if this breaks things we 
		should soon know :)

2009-06-13 [colin]	3.7.1cvs75

	* src/gtk/spell_entry.c
		Fix assertion. We can put a NULL gtkaspell to
		an entry; it just means it won't be spell-checked.

2009-06-12 [mones]	3.7.1cvs74

	* src/compose.c
	* src/messageview.c
	* src/prefs_account.c
	* src/prefs_account.h
	* src/common/utils.c
	* src/common/utils.h
		Added preference to use account address in generated
		Message-Id. Fixes Debian bug #531052

2009-06-12 [colin]	3.7.1cvs73

	* src/common/ssl.c
		Better fix, API-compatible with libgnutls13

2009-06-12 [colin]	3.7.1cvs72

	* src/common/ssl.c
		Use compatibility mode in GnuTLS, and avoid problems with 
		servers that don't comply 100% with the spec, but still
		exist.

2009-06-06 [iwkse]	3.7.1cvs71

	* src/compose.c
		Ops..revert a mix with another patch

2009-06-06 [iwkse]	3.7.1cvs70

	* src/compose.c